# UIproject

./: CMakeLists.txt  README.md
WidgetLibraryEvaQube/include/Button/: ButtonModel.h  ButtonView.h  ButtonViewModel.h
WidgetLibraryEvaQube/include/Core/: AssetManager.h  WidgetModel.h  WidgetView.h  WidgetViewModel.h
WidgetLibraryEvaQube/include/Image/: ImageModel.h  ImageView.h  ImageViewModel.h
WidgetLibraryEvaQube/include/Text/: TextModel.h  TextView.h  TextViewModel.h
WidgetLibraryEvaQube/src/: main.cpp
WidgetLibraryEvaQube/src/Button/: ButtonModel.cpp  ButtonView.cpp  ButtonViewModel.cpp
WidgetLibraryEvaQube/src/Core/: AssetManager.cpp
WidgetLibraryEvaQube/src/Image/: ImageModel.cpp  ImageView.cpp  ImageViewModel.cpp
WidgetLibraryEvaQube/src/Text/: TextModel.cpp  TextView.cpp  TextViewModel.cpp
include/Core/: Game.h
src/: main.cpp
src/Core/: Game.cpp
